added start functionality